--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -68,9 +68,9 @@ Pour ce projet, nous avons voulu réaliser un site permettant à Vélocampus de 
 Après une réunion avec les membres de l'association, nous sommes arrivés à la conclusion que le site contiendrait une petite partie client, rendant ainsi l'association présente sur le web et une grosse partie administration, permettant toutes la gestions de l'association. 
 Nous avons finalement construit ce cahier des charges :\\
 
-\begin{itemize}
-\item[•] La partie administration : \\
-Elle sera accessible à tous les membres de l'association
+
+\section{La partie administration :} 
+Elle sera accessible à tous les membres de l'association \\
 \begin{itemize}
 \item Une mailing liste des adhérents \\
 \textit{(Permettant à l'administrateur d'importer la liste sur une boite mail afin de pouvoir envoyer des messages groupés)}
@@ -88,11 +88,10 @@ Elle sera accessible à tous les membres de l'association
 \item L'importation d'un calendrier Gmail \\
 \textit{(Permettant d'importer un calendrier d'évenement sur la partie client du site et d'afficher le calendrier interne de l'association sur la partie administration du site)}
 \end{itemize}
-\end{itemize}
+
   
   
-\begin{itemize}
-\item[•] La partie client :\\
+\section{ La partie client :}
 
 \begin{itemize}
 \item Une formulaire d'adhésion \\
@@ -105,9 +104,6 @@ Elle sera accessible à tous les membres de l'association
 \item Une page de photos et videos  
 
 \end{itemize}
-\end{itemize}
-   
-
 \chapter{Base de données}
 \section{le modèle conceptuel de donnée}
 \begin{center}
@@ -118,10 +114,22 @@ Elle sera accessible à tous les membres de l'association
 
 \chapter{Le fonctionnement du site Internet}
 
+
 \chapter{Les problèmes rencontrés}
-
+\begin{itemize}
+\item Adblock bla bla bla
+\item Chemin absolut bla bla bla
+\item Repartition du travail bla bla bla
+\item ??
+\end{itemize}
 \chapter{Les améliorations possibles}
-
+\begin{itemize}
+\item Réparation d'un vélo non loué bla bla bla
+\item Demande de location en ligne bla bla
+\item Gestion des compte rendu de reunions bla bla
+\item Ajout d'un forum bla bla
+\item Ajout d'une fontionnalité de paiement en ligne bla bla
+\end{itemize}
 \chapter*{Conclusion}
 \end{document}
 
