--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -116,12 +116,21 @@ Elle sera accessible à tous les membres de l'association \\
 
 
 \chapter{Les problèmes rencontrés}
-\begin{itemize}
-\item Adblock bla bla bla
-\item Chemin absolut bla bla bla
-\item Repartition du travail bla bla bla
-\item ??
-\end{itemize}
+
+\section{Adblock :} 
+Adblock est une extension informatique permettant de bloquer les publicités sur les navigateurs. Elle est donc installé sur beaucoup d'ordinateur. 
+Malheureusement, elle ne bloque pas que les publicités, lors de la réalisation du projet nous nous sommes aperçu que celle ci bloquait aussi toutes les actions ajax du site (qui nous permettaient le plus souvent de sécuriser le site) 
+Nous avons donc du modifier notre façon de fonctionner. cela nous a fait perdre un peu de temps.
+
+\section{La sécurité : }
+Ce projet étant utilisés par la suite sur internet, il était primordiale de le sécuriser. Or, nous n'avons aucun cours sur la sécurité internet à l'IUT, nous avons donc du étudier cette aspect de l'informatique par nous même. Cela nous a donc apporté une charge de travail supplémentaire.
+
+\section{Répartition du travail : }
+Finalement, le plus gros problème que nous avons rencontrés est la répartition du travail. 
+Le chef de projet a d'abord partagé les premières taches en pensant vérifier à la fin de la semaine leurs réalisations pour, ensuite, pouvoir en fournir d'autre. Malheureusement, seul trois membres ont travaillés, le quatrième n'avait absolument rien réalisé à la fin de la semaine. 
+La tache de celui-ci étant indispensable pour la suite, le chef de projet a préféré la coder lui même car il s'est rendu compte qu'elle ne serait jamais faites.
+Ce petit manège a recommencer à chaque nouvelle distribution de taches. C'est seulement à la fin du projet que l'élève en question a fini par avouer qu'il avait décidé de ne rien faire pour ce projet car la matière n'était pas assez importante à ses yeux. Cette mésaventure nous a fait perdre beaucoup de temps car nous avons souvent du attendre sur le travail de l'élève en question pour continuer à avancer. De plus, nous avons du travailler plus pour rattraper le travail manquant de se membre.
+Ce projet étant difficilement réalisable à quatre, la difficulté a évolué dès lors que nous sommes passé à seulement trois membres actifs. 
 \chapter{Les améliorations possibles}
 \begin{itemize}
 \item Réparation d'un vélo non loué bla bla bla
