test image couv

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -48,7 +48,9 @@ Auguste \textsc{meyer}
 Alexandru  \textsc{dobrila}
 \end{flushright}
 \end{minipage}
-
+\\[1cm]
+\includegraphics[width=0.8\textwidth]{site.jpg}~
+\\[1cm]
 \vfill
 
 % Bottom of the page
