--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -5,6 +5,7 @@
 \usepackage{amsmath} 
 \usepackage{amsfonts} 
 \usepackage{amssymb} 
+\usepackage{hyperref}
 \usepackage{graphicx} 
 \usepackage[final]{pdfpages} 
 \usepackage[toc,page]{appendix} 
@@ -115,7 +116,12 @@ Elle sera accessible à tous les membres de l'association \\
 \section{La réalisation du MCD}
 
 \chapter{Le fonctionnement du site Internet}
-
+Le site est organisés en deux parties, une partie administration assez conséquente et une partie client.
+\section{La Structure}
+Tous d'abord nous avons utilisés GITHUB qui est un très bonne outils de gestion de développement.
+Vous pouvez trouvez notre projet à ce lien :
+\url{https://github.com/kwidz/VeloCampus}
+Afin de ne pas se perdre dans tous les fichiers 
 
 \chapter{Les problèmes rencontrés}
 
