--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -121,7 +121,21 @@ Le site est organisés en deux parties, une partie administration assez conséqu
 Tous d'abord nous avons utilisés GITHUB qui est un très bonne outils de gestion de développement.
 Vous pouvez trouvez notre projet à ce lien :
 \url{https://github.com/kwidz/VeloCampus}
-Afin de ne pas se perdre dans tous les fichiers 
+De plus nous avons utiliser un framework CSS : Bootstrap, pour que notre site internet s'adapte à tous type d'écrans sans trop de problèmes.
+Enfin, afin de ne pas se perdre dans tous les fichiers, nous avons suivi une struture assez simple : Nous avons plusieurs fichiers :
+\begin{itemize}
+\item index.php \\
+\textit{(Ce fichier inclue les différentes pages html)}
+\item footer.html
+\item header.html
+\item menu.html \\
+\textit{(Ce fichier contient le menu que l'utilisateur vois lorqu'il n'est pas connecté)}
+\item menulog.html \\
+\textit{(Ce fichier contient le menu que l'utilisateur vois lorqu'il est connecté)}
+\end{itemize}
+ puis des dossiers portant le noms de chaques sous partie du menu, contenant un dossier de traitement ainsi qu'un index.
+ 
+  
 
 \chapter{Les problèmes rencontrés}
 
