--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -135,7 +135,20 @@ Enfin, afin de ne pas se perdre dans tous les fichiers, nous avons suivi une str
 \end{itemize}
  puis des dossiers portant le noms de chaques sous partie du menu, contenant un dossier de traitement ainsi qu'un index.
  
-  
+\section{Les fonctions importantes}
+Ce projet contient beaucoup de fonctions donc pour la suite nous expliquerons le fonctionnement que de certaines parties.  
+\subsection{La partie location}
+La partie Location se trouve dans la partie admistration, elle permet de : 
+\begin{itemize}
+\item Créer une location
+\item Voir les vélos non loués
+\item Voir les personnes qui n'ont pas encore rendu leurs vélos
+\item Voir toutes les locations de l'année
+\item Ajouter un retour de location 
+\end{itemize}
+
+Cette partie a été délicate à gerer car lorque l'on loue un vélo il faut connaitre son état, la date de location, les noms des cadenas qui sont loué avec le vélos ... Il nous a donc fallut faire plusieurs jointure. 
+ 
 
 \chapter{Les problèmes rencontrés}
 
