--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -181,7 +181,11 @@ Nous voulions créer une fonctionnalité simple qui permettrait aux membres de V
 \end{center}
 
 
-
+\subsection{Le Postit}
+Les membres avaient besoins de pouvoir communiquer entre eux sur la page administration. Nous avons d'abord pensé à créer un compte administrateur pour chaque membre afin qu'ils puissent communiquer. Finalement, puisque tous les membres avaient tous les mêmes droits sur la page administration, il semblait plus logique de ne faire qu'une seule session administrateur. C'est ainsi que nous avons crée "le postit" :   
+\begin{center}
+\includegraphics[width=0.3\textwidth]{postit.jpg}~
+\end{center}
 \chapter{Les problèmes rencontrés}
 
 \section{Adblock :} 
