--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -180,12 +180,15 @@ Nous voulions créer une fonctionnalité simple qui permettrait aux membres de V
 \includegraphics[width=0.3\textwidth]{addImage.jpg}~
 \end{center}
 
-
+A FINIR ! 
 \subsection{Le Postit}
 Les membres avaient besoins de pouvoir communiquer entre eux sur la page administration. Nous avons d'abord pensé à créer un compte administrateur pour chaque membre afin qu'ils puissent communiquer. Finalement, puisque tous les membres avaient tous les mêmes droits sur la page administration, il semblait plus logique de ne faire qu'une seule session administrateur. C'est ainsi que nous avons crée "le postit" :   
 \begin{center}
 \includegraphics[width=0.3\textwidth]{postit.jpg}~
 \end{center}
+
+Postit est une table à part dans la base de donnée, relier à aucune autres. C'est pour cela qu'elle n'est pas présenté sur le MCD plus haut.
+Ce postit fonctionne simplement avec un formulaire qui envois les valeurs des champs "nom" et "message" à une page php qui elle même les insert dans la base de données. 
 \chapter{Les problèmes rencontrés}
 
 \section{Adblock :} 
