--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -265,8 +265,11 @@ Ce projet n'étant pas entièrement réalisable en un mois, ils restent beaucoup
 \textit{(L'association Vélocampus aurait aimé que nous mettions en place un forum pour tous les adhérents, nous avons malheureusement pas eu le temps)} 
 \item Ajout d'une fontionnalité de paiement en ligne \\
 \textit{(Nous aurions pu ajouter un lien paypal mais cela compliquait les choses plus qu'autres choses, de plus l'association préfère le contact humain.)} 
+\item Creer une application android
 \end{itemize}
 \chapter*{Conclusion}
+Finalement, ce projet était enrichissant car il devait à la fois répondre à la demande du professeur et à la demande du client. 
+De plus, il nous a permis de découvrir le travail en collaboration avec un client qui compte sur nous. Enfin ... ?
 \end{document}
 
 
